modules/noosphere/taghmata/nixidy/manifests/prod/radarr/Service-radarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: yarr
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 7878
  selector:
    app: radarr
  type: ClusterIP
