modules/noosphere/taghmata/nixidy/manifests/prod/radarr/Ingress-radarr-ip-root.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false,Delete=false
    category: yarr
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    glance/description: Pvr
    glance/icon: di:radarr
    glance/id: radarr
    glance/name: Radarr
    glance/parent: radarr
    glance/url: https://radarr.noosphere.uk
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  name: radarr-ip-root
  namespace: yarr
spec:
  ingressClassName: traefik
  rules:
    - host: radarr.noosphere.uk
      http:
        paths:
          - backend:
              service:
                name: radarr
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - radarr.noosphere.uk
      secretName: radarr-tls
